--- a/usaproxyreportgenerator/src/main/resources/css/session-report.css
+++ b/usaproxyreportgenerator/src/main/resources/css/session-report.css
@@ -1,7 +1,5 @@
 html
 {
-	height: 100%;
-	min-height: 100%;
 	padding: 0px;
 	margin: 0px;
 }
@@ -10,40 +8,46 @@ body
 {
 	font-size: 9pt;
 	font-family: Verdana,sans-serif;
-	height: 100%;
 	padding: 0px;
 	margin: 0px;
-	min-height: 100%;
 	color: #000000;
 }
 
 #outerContainer
 {
+	position: absolute;
+	top: 0;
+	left: 0;
+	right: 0;
 	margin: 0px;
 	padding: 0px;
 	border: 0px;
 	width: 100%;
-	height: 100%;
 	display: block;
+	min-height: 100%;
 }
 
 #rightContent
 {
-	display: inline-block;
+	position: absolute;
+	left: 205px;
+	right: 0;
+	top: 0;
 	height: 100%;
 }
 
 #leftBar
 {
-	border-right: 1px solid black;
-	background-color: #FFE080;
+	position: absolute;
+	top: 0;
+	left: 0;
 	width: 205px;
 	display: block;
 	float: left;
-	height: 100%;
 	vertical-align: top;
 	margin: 0px;
 	padding: 0px;
+	min-height: 100%;
 }
 
 #leftBar h1
@@ -76,6 +80,7 @@ body
 	background-color: #FFF8E0;
 	border-top: 1px dotted black;
 	border-bottom: 1px dotted black;
+	border-right: 1px dotted black;
 }
 
 #header-list li
@@ -95,19 +100,32 @@ body
 #httpTraffic-list
 {
 	list-style-type: circle;
-	list-style-position: outside;
-	margin: 0px 0px 0px 1em;
-	padding: 0.5em 0px 0.5em 0.5em;
+	list-style-position: inside;
+	margin: 0px 0px 1em 0px;
+	padding: 0px 0px 0px 0px;
+	border-top: 1px dotted black;
+	border-bottom: 1px dotted black;
+	border-right: 1px dotted black;
+	background-color: #FFF8E0;
 }
 
 #httpTraffic-list li
 {
-	margin-bottom: 1em;
+	margin: 0px 0px 0px 0px;
+	padding: 0em 0.5em 1em 0.5em;
+}
+
+.trafficlistitem .list-content
+{
+	clear: both;
 }
 
 .list-sub-content
 {
 	font-size: 75%;
+	display: block;
+	word-break: break-all;
+	word-wrap:break-word;
 }
 
 .hilight
@@ -124,8 +142,39 @@ body
 .placeholder
 {
 	display : none;
-	padding : 0px 2em 2em 0px;
-	margin: 2em 0px 0px 2em;
-    width: 80%;
-    height: 80%;
+	padding : 0px 1em 1em 0px;
+	margin: 1em 0px 0px 1em;
+	height: 90%;
+}
+
+#toolbar
+{
+	display: block;
+	padding: 0.9em;
+	margin: 0px;
+	border: 1px dotted black;
+	background-color: #FFF8E0;
+}
+
+#controls
+{
+	position: absolute;
+	top: 0;
+	left: 0;
+	right: 0;
+	padding: 1em;
+	margin: 0px;
+	height: 40px;
+	font-size: 80%;
+	display: none;
+}
+
+#placeholders
+{
+	position: absolute;
+	left: 0;
+	right: 0;
+	top: 40px;
+	bottom: 0;
+	margin-top: 1em;
 }
