HTTP headers can now be viewed in the report

--- a/usaproxyreportgenerator/src/main/resources/css/session-report.css
+++ b/usaproxyreportgenerator/src/main/resources/css/session-report.css
@@ -196,3 +196,13 @@ body
 	padding: 0;
 	border: 0;
 }
+
+#httpHeadersDialog div
+{
+	float: left;
+	display: inline;
+	width: 50%;
+	margin: 0;
+	padding: 0;
+	border: 0;
+}
