added radio buttons for choosing whether the filters show or hide items

--- a/usaproxyreportgenerator/src/main/resources/css/session-report.css
+++ b/usaproxyreportgenerator/src/main/resources/css/session-report.css
@@ -216,6 +216,11 @@ table.headers td
 	border: 0;
 }
 
+.filter-list-alert
+{
+	background-color: #FFF9E5;
+}
+
 #httpHeadersDialog div
 {
 	float: left;
